# Gomoku_AI

./: CMakeLists.txt  CMakeSettings.json  Makefile  README.md  main.cpp
includes/: BoardInstance.h  Commands.h  Incephalon.h  Settings.h  SharedFunctions.h  Structures.h
sources/: BoardInstance.cpp  Commands.cpp  Incephalon.cpp  Settings.cpp  SharedFunctions.cpp
